# FastAPI-on-K8s-with-Helm

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  Senior Site Reliability Engineer - Prima.docx  docker-compose.yaml  pyproject.toml  setup.cfg
.github/workflows/: build.yml  release.yml
prima-api/: Chart.yaml  values.yaml
prima-api/templates/: deployment.yaml  hpa.yaml  ingress.yaml  nginx-config.yaml  service.yaml  serviceaccount.yaml
prima_sre/: __init__.py  app.py
proxy/: Dockerfile  default.conf.tpl.local  docker-task.sh  entrypoint.sh
requirements/: requirements-test.in  requirements-test.txt  requirements.txt
terraform/: dynamodb.tf  iam.tf  kubernetes.tf  s3.tf  terraform.tfstate.backup  variables.tf
terraform/backends/: dev.backend
tests/: conftest.py  test_app.py
